<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100"
            android:src="@drawable/img_logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_no_hp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/bg_round_input_text"
            android:hint="@string/hint_no_hp"
            android:padding="@dimen/dimen_10"
            android:textSize="@dimen/font_14"
            android:textColorHint="@color/color_text_black"
            android:textColor="@color/color_text_black"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edt_psw"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_40"
            android:background="@drawable/bg_round_input_text"
            android:hint="@string/hint_psw"
            android:padding="@dimen/dimen_10"
            android:textColorHint="@color/color_text_black"
            android:textColor="@color/color_text_black"
            android:textAlignment="center"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_no_hp" />

        <TextView
            android:id="@+id/tv_forgot_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:text="@string/psw_forgot"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"
            android:textColor="@color/color_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_psw" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:padding="@dimen/dimen_12"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textSize="@dimen/font_14"
            app:backgroundTint="@color/color_btn_green"
            app:cornerRadius="25.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_psw" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18"
            android:text="@string/sign_in"
            android:textSize="@dimen/font_16"
            android:textColor="@color/color_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>